test/types/bytes/param-compiler-error.good
param-compiler-error.chpl:2: In function 'foo':
param-compiler-error.chpl:3: error: cannot initialize 'x' of type 'int(64)' from '1.0'
  param-compiler-error.chpl:6: called as foo(param arg = b"a")
