test/types/bytes/param-compiler-error.chpl

proc foo(param arg) {
  var x:int = 1.0;
}

foo(b"a");
